test/error/multi_line_comment_2.colgm
func /* a b c */ main()