test/error/multi_line_comment_2.result
Error: expected "{", but reached end of file
  --> test/error/multi_line_comment_2.colgm:1:24
  | 
1 | func /* a b c */ main()
  | 

Error: expected statement here.
  --> test/error/multi_line_comment_2.colgm:1:24
  | 
1 | func /* a b c */ main()
  | 

Error: expected "}"
  --> test/error/multi_line_comment_2.colgm:1:23
  | 
1 | func /* a b c */ main()
  |                       ^